Layout and dll change

--- a/Uplift/appsettings.json
+++ b/Uplift/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=Uplift;Trusted_Connection=True;MultipleActiveResultSets=true"
+    //"DefaultConnection": "Server=.;Database=Uplift;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "DefaultConnection": "Data Source=tcp:upliftdemodbserver.database.windows.net,1433;Initial Catalog=UpliftDemo_db;User Id=adminuser@upliftdemodbserver;Password=Admin123*"
   },
   "Logging": {
     "LogLevel": {
